# NMS-3D

./: .gitignore  LICENSE  NMS-3D.py  README.md  bbox-coords-before-nms-3d.csv  best_boxes_after_nms.html  example.py  main.py  nms_3d.py  prediction_boxes_before_nms.html  pyproject.toml  requirements.txt
bbox-coords/: bbox-coords-after-nms-3d.csv  bbox-coords-before-nms-3d.csv
docs/: _config.yml  index.md  installation.md
docs/functions/: index.md  nms_3d.md  plot_3d_boxes.md
nms_3d/: __init__.py  nms_3d.py  plot_3d_boxes.py
output/: best_boxes_after_nms.html  prediction_boxes_before_nms.html
